Add DCAE deployment to docker run script
Add DCAE deployment to docker run script

Change-Id: Ibcffb2c8398fdd9989172783c641cd7ba5437fd2
Issue-ID: SDC-1395
Signed-off-by: Areli, Fuss (af732p) <af732p@att.com>